--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,49 @@
 {
-    "redirects": [
-      { "source": "https://my-spotify-data-center-server.rodriandrade.vercel.app/login", "destination": "https://github.com/vercel/vercel" }
+    "version": 2,
+    "builds": [
+        {
+            "src": "app.js",
+            "use": "@now/node-server"
+        }
     ],
     "routes": [
         {
-            "src": "https://my-spotify-data-center-server.rodriandrade.vercel.app/login",
+            "src": ".*",
+            "methods": [
+                "GET",
+                "POST",
+                "DELETE",
+                "PUT",
+                "OPTIONS"
+            ],
+            "headers": {
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
+                "Access-Control-Allow-Credentials": "true"
+            },
+            "dest": "app.js",
+            "continue": true
+        },
+        {
+            "src": "/login",
             "dest": "/app.js",
             "methods": [
                 "GET"
             ]
-        }
+        },
+        {
+            "src": "/callback",
+            "dest": "/app.js",
+            "methods": [
+                "GET"
+            ]
+        },
+        {
+            "src": "/refresh_token",
+            "dest": "/app.js",
+            "methods": [
+                "GET"
+            ]
+        }        
     ]
 }
