--- a/vercel.json
+++ b/vercel.json
@@ -26,7 +26,7 @@
         },
         {
             "src": "/login",
-            "dest": "/app.js",
+            "dest": "https://accounts.spotify.com/authorize?(.*)",
             "methods": [
                 "GET"
             ]
